small mistake in image url

--- a/app/assets/stylesheets/home_index.css.scss
+++ b/app/assets/stylesheets/home_index.css.scss
@@ -35,7 +35,7 @@
 
 #image1 {background-image: url('http://res.cloudinary.com/fivestars/image/upload/v1421395364/IMG_0_c8sfz6.png');}
 #image2 {background-image: url('http://res.cloudinary.com/fivestars/image/upload/v1421395381/IMG_3_f0jres.png');}
-#image3 {background-image: url('http://res.cloudinary.com/fivestars/image/upload/v1421395380/IMG_4_xtzxxs.png.png');}
+#image3 {background-image: url('http://res.cloudinary.com/fivestars/image/upload/v1421395380/IMG_4_xtzxxs.png');}
 #image4 {background-image: url('http://res.cloudinary.com/fivestars/image/upload/v1421395369/IMG_5_t6zags.png');}
 
 
