modifications in the header

--- a/app/assets/stylesheets/home_index.css.scss
+++ b/app/assets/stylesheets/home_index.css.scss
@@ -8,10 +8,19 @@
     color: #fff;
     text-align: center;
     padding-top: 40vh;
-    font-size: 50px;
+    font-size: 20px;
     font-family: sans-serif;
     font-weight: 800;
     line-height: 1.635;
+
+    .header {
+      font-size: 50px;
+    }
+
+    .content {
+      padding: 2% 15%;
+      font-weight: 300;
+    }
 
   }
 
