--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,9 @@
 <div id="home">
-  <div id="image1" class="image-bar">US Trip</div>
+  <div id="image1" class="image-bar">
+    <div class="header">US Trip</div>
+    <div class="content">
+    </div>
+  </div>
   <div id="content1" class="content-bar">
     <div class="header">Washington DC</div>
     <div class="content">
@@ -27,7 +31,7 @@
   <div id="content4" class="content-bar">
     <div class="header">Las Vegas</div>
     <div class="content">
-      A lighted castle on a small strip in the middle of a desert. Gambling, fun, entertainment. An apt place for the right amount of wrong.
+      A lighted castle on a small strip in the middle of a desert. Gambling, fun, entertainment. An apt place for just the right amount of wrong.
     </div>
   </div>
 
