--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
   <div id="content1" class="content-bar">
     <div class="header">Washington DC</div>
     <div class="content">
-      A land of American history, securely preserved and beautifully presented.
+      A land of American history, securely preserved and beautifully presented. Museums, museums and museums.
     </div>
   </div>
 
